# ERR-MapForGoblins-DLL

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE.txt  MapForGoblins.ini  README.md  build.bat  clang-cl-xwin.cmake
assets/: README.txt  README_convergence.txt  README_erte.txt  README_vanilla.txt  nexus_page.bbcode.txt
assets/map_icons/: worldmap_new_actual.xml
assets/menu/: 02_120_worldmap_convergence.gfx  02_120_worldmap_err.gfx  02_120_worldmap_erte.gfx  02_120_worldmap_new.gfx  02_120_worldmap_vanilla.gfx
data/: ItemLotParam_map.csv  PlaceName_engus.json  WorldMapPlaceNameParam.json  boss_list.json  ember_pieces.json  emevd_lot_mapping.json  enemy_bloodmsg_mapping.json  enemy_names_i18n.json  enemy_tutorial_mapping.json  entity_name_cache.json  goods_incantation_ids.json  goods_sorcery_ids.json  goods_sort_groups.json  goods_type_sortgroup.json  grace_position_index.json  item_icon_table.json  kindling_spirits.json  loot_lot_linkage.json  map_name_regions.json  msb_entity_index.json  npc_name_id_map.json  npc_name_ids.json  npc_name_text_map.json  quest_invader_overrides.json  quest_npc_extracted.json  relocating_flee_spawns.json  rune_pieces.json  seal_puzzles.json  tile_region_map.json  tutorial_title_ids.json  tutorial_title_names.json  unreachable_msb_lots.json
data/map_snapshots/: err-2.2.9.6.json
data/massedit_generated/: Equipment - Armaments.MASSEDIT  Equipment - Armour.MASSEDIT  Equipment - Ashes of War.MASSEDIT  Equipment - Spirits.MASSEDIT  Equipment - Talismans.MASSEDIT  Key - Celestial Dew.MASSEDIT  Key - Cookbooks.MASSEDIT  Key - Crystal Tears.MASSEDIT  Key - Great Runes.MASSEDIT  Key - Larval Tears.MASSEDIT  Key - Lost Ashes.MASSEDIT  Key - Scadutree Fragments.MASSEDIT  Key - Seeds Tears Ashes.MASSEDIT  Loot - Ammo.MASSEDIT  Loot - Bell-Bearings.MASSEDIT  Loot - Consumables.MASSEDIT  Loot - Crafting Materials.MASSEDIT  Loot - Dragon Hearts.MASSEDIT  Loot - Gestures.MASSEDIT  Loot - Gloveworts.MASSEDIT  Loot - Golden Runes (Low).MASSEDIT  Loot - Golden Runes.MASSEDIT  Loot - Greases.MASSEDIT  Loot - Great Gloveworts.MASSEDIT  Loot - Material Nodes.MASSEDIT  Loot - Material Nodes_slots.json  Loot - Merchant Bell-Bearings.MASSEDIT  Loot - Rada Fruit.MASSEDIT  Loot - Reusables.MASSEDIT  Loot - Rune Arcs.MASSEDIT  Loot - Smithing Stones (Low).MASSEDIT  Loot - Smithing Stones.MASSEDIT  Loot - Stat Boosts.MASSEDIT  Loot - Stonesword Keys.MASSEDIT  Loot - Throwables.MASSEDIT  Magic - Incantations.MASSEDIT  Magic - Prayerbooks.MASSEDIT  Magic - Sorceries.MASSEDIT  Quest - Progression.MASSEDIT  Reforged - Ember Pieces.MASSEDIT  (+20 more)
dll/offline/: locations_hybrid.txt
docs/: HANDOFF.md  KNOWLEDGE_EN.md  KNOWLEDGE_RU.md  aeg099_gathering_nodes.md  backlog.md  changelog.md  coverage_base.md  coverage_dlc.md  coverage_summary.md  coverage_vs_mapgenie.md  crash_dump_diagnostics.md  dx_bugs_backlog_plan.md  elden_ring_notification_systems.md  embedded_font_rationale.md  emevd_death_flags_results.md  ersc_hosting_and_map_autohide.md  feat_quests_implementation_plan.md  geom_collection_tracking.md  geom_nonactive_block_manager.md  grace_placement_followups.md  item_classification.md  linux_test_prompt.md  loot_from_disk_test_status.md  loot_identity_probe_result.md  loot_item_count_plan.md  lot_reachability.md  map_open_freeze.md  marker_affine_hook_re_findings.md  marker_mapspace_CT_recipe.md  marker_to_mapspace_re_findings.md  messages_offline_research.md  nobake_scoreboard.md  parser_coverage_results.md  re_findings_playerpos.md  re_findings_questbrowser_cursor.md  rpm_walk_audit.md  runtime_modding_framework_vision.md  spatial_grid_opti_plan.md  taxonomy_map_probe.md  unplaced_items.md  (+19 more)
docs/memory/: README.md  common.md  linux.md  windows.md
docs/plans/: README.md  baked_data_full_removal_plan.md  big_files_refactor_plan.md  clang_only_toolchain_plan.md  dx_bugs_backlog_plan.md  feat_quests_implementation_plan.md  generated_data_removal_plan.md  goblin_inject_refactor_plan.md  input_module_refactor_plan.md  item_stacking_plan.md  loot_item_count_plan.md  loot_name_dx_followups.md  loot_name_native_getmessage_refactor_plan.md  (+4 more)
src/: dllmain.cpp  goblin_bench.hpp  goblin_collected.cpp  goblin_collected.hpp  goblin_config.cpp  goblin_config.hpp  goblin_config_schema.cpp  goblin_config_schema.hpp  goblin_crashdump.cpp  goblin_crashdump.hpp  goblin_debug_events.cpp  goblin_debug_events.hpp  goblin_dll_export.hpp  goblin_field_probe.cpp  goblin_field_probe.hpp  goblin_grace_suppression.cpp  goblin_icon_harvest.cpp  goblin_inject.cpp  goblin_inject.hpp  goblin_inject_shared.hpp  goblin_item_classify.cpp  goblin_kindling.cpp  goblin_kindling.hpp  goblin_legacy_fold.cpp  goblin_legacy_fold.hpp  goblin_log_archive.cpp  goblin_log_archive.hpp  goblin_logic.cpp  goblin_logic.hpp  goblin_loot_resolve.cpp  goblin_markers.cpp  goblin_markers.hpp  goblin_messages.cpp  goblin_messages.hpp  goblin_overlay.cpp  goblin_overlay.hpp  goblin_overlay_render.cpp  goblin_overlay_render.hpp  goblin_overlay_render_api.cpp  goblin_overlay_render_api.hpp  (+16 more)
tests/: .gitignore  test_lag_capture  test_lag_capture.cpp  test_msbe_coverage.cpp  test_projection.cpp
tools/: .env  .gitignore  _aob_scan_singletons.py  _bfs_from_msbpoint.py  _bonfire_region_resolver.py  _bonfire_subcategory.py  _bonfire_tile_regions.py  _build_tile_region_map.py  _check_aobs_new_build.py  _check_boss_params.py  _check_flags.py  _check_kindling_alive.py  _check_kindling_region.py  _compare_msb_tmp.py  _decode_90005210.py  _decode_90005768_callers.py  _decode_template_body.py  _deep_bfs_from_sfxman.py  _dump_enemy_lot_2000x.py  _dump_ghost_group.py  _dump_kindling_addrs.py  _dump_promising_node.py  _dump_shop_57258000.py  _enrich_report.py  _explore_m32_emevd.py  _explore_parent_struct.py  _find_31220201_bytes.py  _find_all_entity_ids.py  _find_back_references.py  _find_common_vtable.py  _find_entity_ids.py  _find_entity_in_msb.py  _find_event_32002250.py  _find_lhutel_anywhere.py  _find_lhutel_lots.py  _find_lots_70k.py  _find_missing_templates.py  _find_npc.py  _inspect_grace_params.py  _inspect_piece.py  (+207 more)
(+305 files in other folders)
